--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     background-color: rgb(255, 255, 255);
@@ -14,6 +15,7 @@ header{
     background-color: rgb(255, 255, 255);
     height: 70px;
     display: flex;
+    justify-content: space-between;
 }
 
 #logo{
@@ -21,6 +23,7 @@ header{
     margin-top: 7px;
     margin-left: 8px;
 }
+
 #logo:hover{
     cursor: pointer;
 }
@@ -28,17 +31,14 @@ header{
 nav ul {
     display: flex;
     font-size: large;
-    margin-left: 1190px;
     margin-top: 25px;
     gap: 30px;
     font-weight: 700;
-
-    
+    margin-right: 20px;
 }
 
 nav ul li a{
     color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav ul  :hover {
@@ -69,11 +69,15 @@ nav ul  :hover {
     cursor: pointer;
     margin: 20px 20px 100px;
     font-size: 40px;
+    border: none; 
 }
+
+#botão1 :hover{
+    background-color: rgb(185, 236, 0);
+} 
 
 #bcorridas p{
     color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 #bpilotos{
