--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -6,8 +6,9 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(107, 107, 107);
 }
 
 header{
@@ -46,11 +47,105 @@ nav ul  :hover {
     margin-top: -3px;
 }
 
-#imgBanner {
+.container {
+    max-width: 1200px;
+    width: 95%;
+    margin-top: 30px;
+    margin-left: 100px;
+  }
+
+  .slider-wrapper {
+    position: relative;
+  }
+
+  .slider-wrapper .slide-button {
+    position: absolute;
+    top: 50%;
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 50px;
+    z-index: 5;
+    color: #fff;
     display: flex;
+    cursor: pointer;
+    font-size: 2.2rem;
+    background: #000;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transform: translateY(-50%);
+  }
+  .slider-wrapper .slide-button:hover {
+    background: #404040;
+  }
+  .slider-wrapper .slide-button#prev-slide {
+    left: -25px;
+    display: none;
+  }
+  .slider-wrapper .slide-button#next-slide {
+    right: -25px;
+  }
+  .slider-wrapper .image-list {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 18px;
+    font-size: 0;
+    list-style: none;
+    margin-bottom: 30px;
+    overflow-x: auto;
+    scrollbar-width: none;
+    border-radius: 30px;
+  }
+  .slider-wrapper .image-list::-webkit-scrollbar {
+    display: none;
+  }
+  .slider-wrapper .image-list .image-item {
+    width: 325px;
+    height: 400px;
+    object-fit: cover;
+  }
+  .container .slider-scrollbar {
+    height: 24px;
     width: 100%;
-    height: auto;
-}
+    display: flex;
+    align-items: center;
+  }
+  .slider-scrollbar .scrollbar-track {
+    background: #ccc;
+    width: 100%;
+    height: 2px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    position: relative;
+  }
+  .slider-scrollbar:hover .scrollbar-track {
+    height: 4px;
+  }
+  .slider-scrollbar .scrollbar-thumb {
+    position: absolute;
+    background: #000;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    height: 100%;
+    cursor: grab;
+    border-radius: inherit;
+  }
+  .slider-scrollbar .scrollbar-thumb:active {
+    cursor: grabbing;
+    height: 8px;
+    top: -2px;
+  }
+  .slider-scrollbar .scrollbar-thumb::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -10px;
+    bottom: -10px;
+  }
 
 #bcorridas{
     margin-top: 30px;
@@ -81,8 +176,31 @@ nav ul  :hover {
 }
 
 #bpilotos{
-    background-color: rgb(250, 0, 0);
-    margin-top: 5px;
+    margin-top: 30px;
+    margin-left: 30px;
+    border-radius: 20px;
+    background-color: rgb(68, 68, 68);
+    width: 80%;
+    height: 600px;
+}
+
+#botão2{
+    width: 400px;
+    height: 100px;
+    border-radius: 20px;
+    background-color: rgb(255, 0, 0);
+    cursor: pointer;
+    margin: 20px 20px 100px;
+    font-size: 40px;
+    border: none; 
+}
+
+#botão2 :hover{
+    background-color: rgb(185, 236, 0);
+} 
+
+#bpilotos p{
+    color: rgb(0, 0, 0);
 }
 
 footer h4{
