--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -1,3 +1,8 @@
+:root{
+  --color--1: white;
+  --color--2: black;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,12 +13,12 @@
 }
 
 body{
-    background-color: rgb(107, 107, 107);
+    background-color: var(--color--1);
 }
 
 header{
     width: 100%;
-    background-color: rgb(254, 255, 255);
+    background-color: var(--color--1);
     height: 70px;
     display: flex;
     justify-content: space-between;
@@ -50,8 +55,7 @@ nav ul  :hover {
 .container {
     max-width: 1200px;
     width: 95%;
-    margin-top: 30px;
-    margin-left: 100px;
+    margin: 30px 7% 7%;
   }
 
   .slider-wrapper {
@@ -67,6 +71,8 @@ nav ul  :hover {
     width: 50px;
     z-index: 5;
     color: #fff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 600;
     display: flex;
     cursor: pointer;
     font-size: 2.2rem;
@@ -76,11 +82,9 @@ nav ul  :hover {
     border-radius: 50%;
     transform: translateY(-50%);
   }
-  .slider-wrapper .slide-button:hover {
-    background: #404040;
-  }
+
   .slider-wrapper .slide-button#prev-slide {
-    left: -25px;
+    left: -27px;
     display: none;
   }
   .slider-wrapper .slide-button#next-slide {
@@ -101,18 +105,30 @@ nav ul  :hover {
     display: none;
   }
   .slider-wrapper .image-list .image-item {
-    width: 325px;
+    width: 525px;
     height: 400px;
     object-fit: cover;
+    border-radius: 10px;
+    transition-property: width, transform;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0;
+  }
+
+  .slider-wrapper .image-list .image-item:hover{
+    width: 535px;
+    transform: translateY(-3px);
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
   }
   .container .slider-scrollbar {
-    height: 24px;
+    height: 4px;
     width: 100%;
     display: flex;
     align-items: center;
   }
   .slider-scrollbar .scrollbar-track {
-    background: #ccc;
+    background: #a5a5a5;
     width: 100%;
     height: 2px;
     display: flex;
@@ -125,11 +141,12 @@ nav ul  :hover {
   }
   .slider-scrollbar .scrollbar-thumb {
     position: absolute;
-    background: #000;
+    background: #000000;
     top: 0;
     bottom: 0;
     width: 50%;
-    height: 100%;
+    height: 140%;
+    transform: translateY(-1px);
     cursor: grab;
     border-radius: inherit;
   }
