--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -18,7 +18,6 @@ body{
 
 header{
     width: 100%;
-    background-color: var(--color--1);
     height: 70px;
     display: flex;
     justify-content: space-between;
@@ -55,7 +54,7 @@ nav ul  :hover {
 .container {
     max-width: 1200px;
     width: 95%;
-    margin: 30px 7% 7%;
+    margin: 30px 9% 7%;
   }
 
   .slider-wrapper {
@@ -166,10 +165,9 @@ nav ul  :hover {
 
 #bcorridas{
     margin-top: 30px;
-    margin-left: 30px;
-    border-radius: 20px;
-    background-color: rgb(68, 68, 68);
-    width: 80%;
+    display: flex;
+    background-color: rgb(150, 150, 150);
+    width: 100%;
     height: 600px;
 }
 
@@ -182,23 +180,24 @@ nav ul  :hover {
     margin: 20px 20px 100px;
     font-size: 40px;
     border: none; 
-}
-
-#botão1 :hover{
-    background-color: rgb(185, 236, 0);
+    margin-top: 200px;
 } 
 
 #bcorridas p{
     color: rgb(0, 0, 0);
+    width: 200px;
+}
+#carroimg{
+  width: 400px;
+  height: 100px;
 }
 
 #bpilotos{
     margin-top: 30px;
-    margin-left: 30px;
-    border-radius: 20px;
-    background-color: rgb(68, 68, 68);
-    width: 80%;
+
+    width: 100%;
     height: 600px;
+    display: flex;
 }
 
 #botão2{
@@ -218,8 +217,22 @@ nav ul  :hover {
 
 #bpilotos p{
     color: rgb(0, 0, 0);
+    width: 200px;
 }
+.btn{
+  border: none;
+  border-radius: 100px;
+  background-color: var(--color--2);
+  margin-left: 15px;
+}
+.btn img{
+  width: 60px;
+  padding: 5px
+}
+.btn img:hover{
+  width: 70px;
 
+}
 footer h4{
    text-align: center;
 }
