--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -166,11 +166,11 @@ nav ul  :hover {
   }
 
 #bcorridas{
-    margin-top: 30px;
+    
     display: flex;
-    background-color: rgb(150, 150, 150);
     width: 100%;
     height: 600px;
+    align-items: center;
 }
 
 #botão1{
@@ -182,10 +182,10 @@ nav ul  :hover {
     margin: 20px 20px 100px;
     font-size: 40px;
     border: none; 
-    margin-top: 200px;
 } 
 
 #bcorridas p{
+  
     color: rgb(0, 0, 0);
     width: 200px;
 }
@@ -193,10 +193,14 @@ nav ul  :hover {
   width: 400px;
   height: 100px;
 }
-
+hr{
+  padding: 1px;
+  background-color: #000;
+  border: none;
+}
 #bpilotos{
-    margin-top: 30px;
-
+  align-items: center;
+    text-align: center;
     width: 100%;
     height: 600px;
     display: flex;
@@ -218,6 +222,7 @@ nav ul  :hover {
 } 
 
 #bpilotos p{
+  
     color: rgb(0, 0, 0);
     width: 200px;
 }
