--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -54,6 +54,8 @@ nav ul  :hover {
 .container {
     max-width: 1200px;
     width: 95%;
+    margin: auto;
+    margin-bottom: 70px;
   }
 
   .slider-wrapper {
@@ -168,27 +170,34 @@ nav ul  :hover {
     width: 100%;
     height: 600px;
     align-items: center;
+    justify-content: space-between;
+    
+    
 }
 
 #botão1{
+    
     width: 400px;
     height: 100px;
     border-radius: 20px;
     background-color: rgb(255, 0, 0);
     cursor: pointer;
-    margin: 20px 20px 100px;
+    margin: 20px 100px 100px;
+    
     font-size: 40px;
     border: none; 
 } 
 
 #bcorridas p{
-  
+    margin-left: -100px;
     color: rgb(0, 0, 0);
     width: 200px;
 }
 #carroimg{
+  justify-content: right;
   width: 400px;
   height: 100px;
+  margin-right: 50px;
 }
 hr{
   padding: 1px;
@@ -196,22 +205,23 @@ hr{
   border: none;
 }
 #bpilotos{
-  align-items: center;
-    text-align: center;
+  display: flex;
     width: 100%;
     height: 600px;
-    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #botão2{
-    width: 400px;
-    height: 100px;
-    border-radius: 20px;
-    background-color: rgb(255, 0, 0);
-    cursor: pointer;
-    margin: 20px 20px 100px;
-    font-size: 40px;
-    border: none; 
+  width: 400px;
+  height: 100px;
+  border-radius: 20px;
+  background-color: rgb(255, 0, 0);
+  cursor: pointer;
+  margin: 20px 100px 100px;
+  
+  font-size: 40px;
+  border: none;
 }
 
 #botão2 :hover{
@@ -222,6 +232,12 @@ hr{
   
     color: rgb(0, 0, 0);
     width: 200px;
+}
+#pilotoimg{
+  justify-content: right;
+  width: 400px;
+  height: 100px;
+  margin-right: 50px;
 }
 .btn{
   border: none;
