--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -1,6 +1,7 @@
 :root{
   --color--1: white;
   --color--2: black;
+  --color--3: rgb(255, 61, 158);
 }
 
 *{
@@ -175,17 +176,22 @@ nav ul  :hover {
 }
 
 .botaoo{  
-    width: 400px;
-    height: 100px;
-    border-radius: 20px;
-    background-color: rgb(255, 0, 0);
+    padding: 20PX 30PX 20PX 30PX;
+    border-radius: 10px;
+    background-color: rgba(255, 63, 89, 0);
+    border: 10px solid var(--color--3);
+    color: var(--color--3);
     cursor: pointer;
     margin-left: 100px;
     font-size: 40px;
     font-weight: 600;
-    border: none;
+    transition:all 0.3s
 } 
-
+.botaoo:hover{
+  transform: translateY(-10px);
+  background-color: var(--color--3);
+  color: var(--color--1);
+}
 .txt{
     margin-left: px;
     color: rgb(0, 0, 0);
@@ -205,17 +211,14 @@ hr{
   background-color: #000;
   border: none;
 }
-#bpilotos{
+#bnews{
   display: flex;
     width: 100%;
     height: 600px;
     align-items: center;
     justify-content: space-between;
 }
-#bpilotos p{
-    color: rgb(0, 0, 0);
-    width: 200px;
-}
+
 
 .btn{
   border: none;
