--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -214,11 +214,14 @@ hr{
 #bnews{
   display: flex;
     width: 100%;
-    height: 600px;
+    height: 517px;
     align-items: center;
     justify-content: space-between;
 }
-
+#pilotoimg{
+  width: 500px;
+  
+}
 
 .btn{
   border: none;
