--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -44,7 +44,7 @@ nav ul {
 }
 
 nav ul li a{
-    color: rgb(0, 0, 0);
+    color: var(--color--2);
 }
 
 nav ul  :hover {
@@ -72,13 +72,13 @@ nav ul  :hover {
     height: 50px;
     width: 50px;
     z-index: 5;
-    color: #fff;
+    color: var(--color--1);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 600;
     display: flex;
     cursor: pointer;
     font-size: 2.2rem;
-    background: #000;
+    background: var(--color--2);
     align-items: center;
     justify-content: center;
     border-radius: 50%;
@@ -143,7 +143,7 @@ nav ul  :hover {
   }
   .slider-scrollbar .scrollbar-thumb {
     position: absolute;
-    background: #000000;
+    background: var(--color--2);
     top: 0;
     bottom: 0;
     width: 50%;
@@ -192,13 +192,21 @@ nav ul  :hover {
   background-color: var(--color--3);
   color: var(--color--1);
 }
-.txt{
-    margin-left: px;
-    color: rgb(0, 0, 0);
+.txt1{
+    color: var(--color--2);
     width: 350px;
     font-size: 25px;
     font-weight: 550;
 }
+
+.txt2{
+  margin-left: 85px;
+  color: var(--color--2);
+  width: 350px;
+  font-size: 25px;
+  font-weight: 550;
+}
+
 #carroimg{
   justify-content: right;
   width: 400px;
@@ -208,7 +216,7 @@ nav ul  :hover {
 
 hr{
   padding: 1px;
-  background-color: #000;
+  background-color: var(--color--2);
   border: none;
 }
 #bnews{
@@ -223,6 +231,22 @@ hr{
   
 }
 
+#bpalestras{
+  display: flex;
+    width: 100%;
+    height: 518px;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.164);
+}
+
+#bpilotos{
+  display: flex;
+    width: 100%;
+    height: 518px;
+    align-items: center;
+    justify-content: space-between;
+}
 .btn{
   border: none;
   border-radius: 100px;
@@ -242,6 +266,10 @@ hr{
 }
 .btn:hover{
   transform: translateY(-10px);
+}
+
+footer{
+  background-color: rgba(0, 0, 0, 0.301)
 }
 footer h4{
    text-align: center;
