--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -267,25 +267,96 @@ hr{
   transform: translateY(-10px);
 }
 
-footer{
-  background-color: rgba(0, 0, 0, 0.473);
-  align-items: center;
-}
 #logos{
-  
+  margin-left: 560px;
 }
 #m{
-  width: 200px;
+  width: 100px;
 }
 #d{
-  width: 100px;
-  margin-bottom: -20px;
+  width: 50px;
+  margin-bottom: -10px;
   margin-left: 30px;
 }
 #f{
   margin-left: 30px;
-  width: 200px;
+  width: 100px;
 }
+
+#login{
+  text-align: center;
+  font-size: 70px;
+  font-weight: 800;
+  margin-top: -20px;
+}
+#divsub{
+  display: flex;
+  gap: 45px;
+  justify-content: center;
+}
+
+.subtextologin{
+  font-weight: 700;
+  margin-bottom: 100px;
+}
+.dados{
+  text-align: center;
+  display: flex;
+}
+
+.userhtml{
+    padding: 2PX 3PX 2PX 3PX;
+    border-radius: 10px;
+    background-color: rgba(255, 63, 89, 0);
+    border: 10px solid var(--color--3);
+    color: var(--color--3);
+    cursor: pointer;
+    margin-left: 100px;
+    font-size: 40px;
+    font-weight: 600;
+    transition:all 0.3s
+    
+}
+.userhtml::placeholder{
+  color: var(--color--3);
+}
+.userhtml:hover{
+  transform: translateY(-10px);
+  background-color: var(--color--3);
+  color: var(--color--1);
+}
+.confirmacao {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+#entrar{
+    padding: 5PX 5PX 5PX 5PX;
+    border-radius: 10px;
+    background-color: rgba(255, 63, 89, 0);
+    border: 10px solid var(--color--3);
+    color: var(--color--3);
+    cursor: pointer;
+    margin-left: 100px;
+    font-size: 50px;
+    font-weight: 600;
+    transition:all 0.3s;
+    margin-bottom: 70px;
+}
+
+#entrar:hover{
+  transform: translateY(-10px);
+  background-color: var(--color--3);
+  color: var(--color--1);
+}
+
+footer{
+  background-color: rgba(0, 0, 0, 0.473);
+  align-items: center;
+}
+
 footer h4{
+  margin-top: 7px;
    text-align: center;
 }
