--- a/Desktop/FormulaESite/src/css/estilo.css
+++ b/Desktop/FormulaESite/src/css/estilo.css
@@ -360,7 +360,7 @@ hr{
 footer{
   background-color: rgba(0, 0, 0, 0.473);
   align-items: center;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
