--- a/Desktop/FormulaESite/src/css/corridas.css
+++ b/Desktop/FormulaESite/src/css/corridas.css
@@ -204,7 +204,6 @@
     .my-section{
       background-color: rgba(190, 190, 160, 1);
       width: 90%;
-      text-align: center;
       height: 700px;
       margin-bottom: -80px;
       border-radius: 20px;
@@ -217,6 +216,32 @@
       padding-top: 30px;
       padding-bottom: 20px;
       font-size: 60px;
+      text-align: center;
+    }
+    .textocorridas{
+      text-align: center;
+      font-size: 25px;
+    }
+    .textod{
+      display: flex;
+      justify-content: space-around;
+      margin-top: 20px;
+      font-size: 25px;
+      font-weight: bolder;
+    }
+    .fotosd{
+      display: flex;
+    }
+    .fotospilotos{
+      width: 75%;
+      margin-left: 20px;
+      margin-top: 90px;
+    }
+
+    .fotospista{
+      width: 25%;
+      height: 25%;
+      margin-top: 90px;
     }
 
     footer{
