--- a/Desktop/FormulaESite/src/css/corridas.css
+++ b/Desktop/FormulaESite/src/css/corridas.css
@@ -2,20 +2,20 @@
     --color--1: white;
     --color--2: black;
     --color--3: rgb(255, 61, 158);
-  }
+}
   
-  *{
-      margin: 0px;
-      padding: 0px;
-      box-sizing: border-box;
-      list-style: none;
-      text-decoration: none;
-      font-family: Arial, Helvetica, sans-serif;
-  }
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+}
   
-  body{
-      background-color: var(--color--1);
-  }
+body{
+  background-color: var(--color--1);
+}
   
   header{
       width: 100%;
@@ -212,60 +212,66 @@
     .hidden{
       display: none;
     }
-    .titulocorridas{
-      padding-top: 30px;
-      padding-bottom: 20px;
-      font-size: 60px;
-      text-align: center;
-    }
-    .textocorridas{
-      text-align: center;
-      font-size: 25px;
-    }
-    .textod{
-      display: flex;
-      justify-content: space-around;
-      margin-top: 20px;
-      font-size: 25px;
-      font-weight: bolder;
-    }
-    .fotosd{
-      display: flex;
-    }
-    .fotospilotos{
-      width: 75%;
-      margin-left: 20px;
-      margin-top: 90px;
-    }
+.titulocorridas{
+  padding-top: 30px;
+  padding-bottom: 20px;
+  font-size: 60px;
+  text-align: center;
+}
+.textocorridas{
+  text-align: center;
+  font-size: 25px;
+}
+.textod{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  font-size: 25px;
+  font-weight: bolder;
+}
+.fotosd{
+  display: flex;
+}
+.fotospilotos{
+  width: 75%;
+  margin-left: 20px;
+  margin-top: 90px;
+}
 
-    .fotospista{
-      width: 25%;
-      height: 25%;
-      margin-top: 90px;
-    }
-
-    footer{
-      background-color: rgba(0, 0, 0, 0.473);
-      align-items: center;
-      margin-top: 128px;
-    }
+.fotospista{
+  width: 25%;
+  height: 25%;
+  margin-top: 90px;
+}
+#fp1{
+  width: 300px;
+}
+#fp2{
+  width: 370px;
+  margin-left: -50px;
+}
+footer{
+  background-color: rgba(0, 0, 0, 0.473);
+  align-items: center;
+  margin-top: 128px;
+}
       
-      #logos{
-        text-align: center ;
-      }
-      #m{
-        width: 100px;
-      }
-      #d{
-        width: 50px;
-        margin-bottom: -10px;
-        margin-left: 30px;
-      }
-      #f{
-        margin-left: 30px;
-        width: 100px;
-      }
-      footer h4{
-        margin-top: 7px;
-         text-align: center;
-      }
+#logos{
+  text-align: center ;
+}
+#m{
+  width: 100px;
+}
+#d{
+  width: 50px;
+  margin-bottom: -10px;
+  margin-left: 30px;
+}
+#f{
+  margin-left: 30px;
+  width: 100px;
+}
+footer h4{
+  margin-top: 7px;
+  text-align: center;
+}
