--- a/src/css/pilotos.css
+++ b/src/css/pilotos.css
@@ -2,7 +2,7 @@
     --color--1: white;
     --color--2: black;
     --color--3: rgb(255, 61, 158);
-    --color--4: rgba(190, 190, 160, 1);
+    --color--4: rgb(188, 188, 185);
 }
   
 *{
@@ -59,7 +59,7 @@ nav ul  :hover {
     background-color: var(--color--2);
     padding: 3px;
     margin-left: 15px;
-    margin-top: -12px;
+    margin-top: -50px;
     position: fixed;
     transition-property: transform;
     transition-duration: 0.3s;
@@ -75,10 +75,12 @@ nav ul  :hover {
 }
 
 .card {
-    font-family: 'Poppins', sans-serif;
-    margin-left: 700PX;
-    display: flex;
+    align-items: center;
     justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    margin-left: 40%;
+    font-family: 'Poppins', sans-serif;
     width: 350px;
     height: 300px;
     position: relative;
@@ -109,6 +111,7 @@ nav ul  :hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    margin-left: 60px;
 }
 
 .card .content {
@@ -125,7 +128,6 @@ nav ul  :hover {
     overflow: hidden;
     transition: 0.5s;
 }
-
 .card:hover .content {
     top: 130px;
     height: 250px;
@@ -152,7 +154,6 @@ nav ul  :hover {
     border-radius: 8px;
     border: 10px solid var(--color--3);
 }
-
 hr{
     padding: 1px;
     background-color: var(--color--2);
